work on particle filters+

--- a/doc/thesis/references.bib
+++ b/doc/thesis/references.bib
@@ -167,7 +167,7 @@ ISSN = {{0959-4388}},
 Unique-ID = {{ISI:000224721200015}},
 }
 
-@article{ ISI:000189252300007,
+@article{ Riera,
 Author = {Riera, JJ and Watanabe, J and Kazuki, T and Naoki, M and Aubert, E and
    Ozaki, T and Kawashima, R},
 Title = {{A state-space model of the hemodynamic approach: nonlinear filtering of
@@ -297,20 +297,6 @@ keywords = "System identification",
 keywords = "Statistical test",
 keywords = "Model selection"
 }
-@article{DellaMaggiore200219,
-title = "An Empirical Comparison of SPM Preprocessing Parameters to the Analysis of fMRI Data",
-journal = "NeuroImage",
-volume = "17",
-number = "1",
-pages = "19 - 28",
-year = "2002",
-note = "",
-issn = "1053-8119",
-doi = "DOI: 10.1006/nimg.2002.1113",
-url = "http://www.sciencedirect.com/science/article/B6WNP-47DKV9V-2/2/ccfad2db718319db51008a47c71ca54a",
-author = "Valeria Della-Maggiore and Wilkin Chau and Pedro R. Peres-Neto and Anthony R. McIntosh"
-}
-
 
 @article{ origin_poststim,
 Author = {Chen, Jean J. and Pike, G. Bruce},
@@ -449,22 +435,6 @@ Month = {{OCT}},
 DOI = {{10.1016/j.conb.2004.08.006}},
 ISSN = {{0959-4388}},
 Unique-ID = {{ISI:000224721200015}},
-}
-
-@article{ ISI:000189252300007,
-Author = {Riera, JJ and Watanabe, J and Kazuki, T and Naoki, M and Aubert, E and
-   Ozaki, T and Kawashima, R},
-Title = {{A state-space model of the hemodynamic approach: nonlinear filtering of
-   BOLD signals}},
-Journal = {{NEUROIMAGE}},
-Year = {{2004}},
-Volume = {{21}},
-Number = {{2}},
-Pages = {{547-567}},
-Month = {{FEB}},
-DOI = {{10.1016/j.neuroimaging.2003.09.052}},
-ISSN = {{1053-8119}},
-Unique-ID = {{ISI:000189252300007}},
 }
 
 @article{ detrend,
