--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -294,9 +294,10 @@ confidence interval.
 \subsection*{Introduction to Particle Filters}
 Particle filters, also known as Sequential Monte Carlo (SMC) methods
 are a powerful way of estimating the posterior probability distribution
-of a set of parameters. Unlike Markov Chain Monte Carlo estimation, particle
+of a set of parameters give a timeseries of measurements. Unlike Markov 
+Chain Monte Carlo estimation, particle
 filters extend relatively easily to any finite impulse response (FIR) system.
-And unlike Variational Bayes or other gradient descent algorithms, particle
+Unlike Variational Bayes or simple gradient descent algorithms, particle
 filters can be run online, with relatively lower cost. The idea of the particle
 filter is to start with a wide mixture PDF of possible parameter sets, 
 and then, as measurements come in, to weight more heavily parameter sets 
@@ -313,59 +314,90 @@ and a true observation equation, $g$ that dictate how the stimulus
 produce noisy measurements,
 \begin{equation}
 \dot{x}(t) = f(t, x(t), u(t), \theta) + \nu_d
+\end{equation}
 
+\begin{equation}
 y(t) = g(t, x(t), u(t), \theta) + \nu_s
 \end{equation}
 
 Where $x(t)$ is a vector of state variables, $\theta$ is a vector of system
-constants, $\nu_d$ is drift noise (such as a Weiner process), $\nu_s$ is additive noise, $y(t)$ is
-the vector of observations. $\nu_d$ may be driven by unknown changes in 
-cerebral blood flow, or blood oxygen content, and is assumed to be zero mean.
-Similarly $\nu_s$, stationary
-noise could be driven by unknown changes due to the heart beat and is also assumed
-to be zero mean. There are also non-biological effects that could drive these
-noise terms such as inherent MR noise. 
+constants, $\nu_d$ and $\nu_s$ are bother stationary zero-mean distributions, $u(t)$
+is timeseries of stimuli and
+$y(t)$ is the vector of observations. $\nu_d$, which produces a drift term in $y(t)$
+may be driven by unknown changes in 
+cerebral blood flow, or blood oxygen content. $\nu_s$ will produce standard
+stationary white noise in $y(t)$ and may encapsulate noise by unknown changes due 
+to the heart beat. There are also significant non-biological effects that 
+could drive these noise terms such as inherent MR noise. 
 
 Although not generally necessary for particle filters, we will make a few
 assumptions based on the particular type of systems faced in biological 
 processes. First, that $\theta$ is time invariant. This assumption is 
 based on the idea that most physiological parameters don't change in the 
 short run unless they are driven by some other stimulus. The obvious exception
-might be something like the heart; however, period between heartbeats vary
-quickly enough that accurately accounting for heart beats necessitates a 
+might be something like the heart; however, period between heartbeats vary quickly enough that accurately accounting for them would necessitate an entirely
 new set of model parameters, or direct outside information. In short we
-assume no parameters are time varying, because not information exists to
+assume no parameters are time varying, because not enough information exists to
 describe any of theme in that way. Luckily particle filters are capable 
-of dealing with non-white, non-Gaussian noise, suck unanticipated influence
+of dealing with non-white, non-Gaussian noise, so ananticipated influence
 may be re-factored as noise. Secondly we assume that input cannot directly
 influence the output, which in the case of the BOLD signal is a good assumption.
 %Third, through some sort of preprocessing, we will assume that $\nu_d$ can be
 %decreased or completely removed, since it 
 Finally, $x(t)$ will include $\theta$, the unknown model constants, although
 obviously that will mean that the vector $\dot{x}$ will always have some members
-that are 0. The state space equations are then simplified to:
+that are constant and 0. The state space equations are then simplified to:
 \begin{equation}
 \dot{x}(t) = f(x(t), u(t)) + \nu_d
+\end{equation}
 
+\begin{equation}
 y(t) = g(x(t)) + \nu_s
 \end{equation}
 
-The goal of the particle filter, is then to derive the true value of $x(t)$
+The goal of the particle filter, is then to derive the probably distribution
+of the value of $x(t)$
 for each time, given known inputs $u(t), u(t-1), ... u(0)$  and noise 
 measurements produced by the system, $y(t), ... , y(0)$ (every time up to
 $t$). To begin with then, the particle filter starts with a prior distribution,
-which is used to build a Dirac Mixture Probability Distribution function:
+which is used to build a Dirac Mixture Probability Distribution Function (PDF):
 
 \begin{equation}
-P(\hat{x}(0)) = \frac{1}{N}\Sigma_0^{N-1} \delta(x_(0) - \hat{x}_i(0))
+\hat{x}(0) \sim p(X = x) = \frac{1}{n}\sum_{i = 0}^{n-1}p_i(x)
 \end{equation}
+where $p_i(x)$ is some probability density function centered at $\hat{x}_i(0)$, particle
+$i$ at time $0$. Thus the sum of the density at $x$ from each particles' PDF is the density
+at $x$. If
+the distributions are infinitely thin, then the distribution will be discrete, otherwise
+it will be continuous. 
 
-where $\hat{x}(0)$ is an empirical representation of the prior, and $\hat{x}_i(0)$
+Thus $\hat{x}(0)$ is an empirical representation of the prior, and $\hat{x}_i(0)$
 is the $i^{th}$ particle, a single possible representation of the system at time 0.
-Initially, since each $\hat{x}_i$ has been drawn form the prior, and no measurements
+Initially, since each $\hat{x}_i$ has been drawn from the prior, and no measurements
 have been made, the particles are all equally weighted. When a measurement becomes
 available, that information is then incorporated into the posterior by re-weighting
-the particles .
+the particles according to how well they estimated this new measurement. 
+\begin{equation}
+Pr[\hat{x}_i(t) | y(0:t-1)] = \int Pr[\hat{x}_i(t) | \hat{x}_i(t-1), y(0:t-1)]Pr[\hat{x}_i(t-1)
+\end{equation}
+Since $\hat{x}(t) = \hat{x}(t-1) + \int_{t-1}^t f(x(t), u(t))dt + \int_{t-1}^t\nu_d dt$, 
+\begin{equation}
+Pr[\hat{x}_i(t) | \hat{x}_i(t-1)] = Pr[\int{t-1}^t \nu_d]
+\end{equation}
+
+of course $\int_{t-1}^t f(x(t), u(t))dt$ may need to be evaluated numerically. Therefore,
+to estimate the posterior probability at $t$, it is just necessary to propagate
+each particle forward in time according to a state space function. To form 
+the posterior probability around the true $x(t)$, each particle is weighted
+based on 
+
+
+
+This
+then results in the expected value of $\hat{y}(t)$:
+\begin{equation}
+E[\hat{y}_i(t) | \hat{x}_i(t-1)] = E[\hat{x}_i(t)]
+\end{equation}
 
 \begin{equation}
 \dot{y} = -ky
@@ -387,7 +419,7 @@ the drop off rate is extremely important. A very thin gaussian probability
 distribution function has nice properties, but thin tails. As a result, large
 outliers in the measurement vector could easily force all the particles to
 have near 0 weights, thus forcing the particle filter to converge improperly. 
-On the other end of the spectrum, a cauchy pdf may not
+On the other end of the spectrum, a cauchy PDF may not
 weight particles in the middle enough, preventing the particles to never 
 converge. Of course, the scale factor, or variance, also plays a signifcant
 role in the convergeance rate. The importance of the weighting function
